# adventofcode2021

./: adventofcode.cabal  stack.yaml
1/: Main.hs
10/: Main.hs
11/: Main.hs
12/: Main.hs
13/: Main.hs
14/: Main.hs
15/: Main.hs
16/: Main.hs
17/: Main.hs
18/: Main.hs
19/: Main.hs
2/: Main.hs
20/: Main.hs
21/: Main.hs
3/: Main.hs
4/: Main.hs
5/: Main.hs
6/: Main.hs
7/: Main.hs
8/: Main.hs
9/: Main.hs
lib/: Lib.hs
lib/Lib/: Count.hs  Point.hs
