cabal-version:       2.2

name:                adventofcode
version:             2021
synopsis:            Advent of code 2021 solutions
description:         Advent of code 2021 solutions in Haskell by Erik Hesselink
license:             BSD-3-Clause
license-file:        LICENSE
author:              Erik Hesselink
maintainer:          hesselink@gmail.com
category:            Advent of Code
build-type:          Simple

Source-Repository head
  Type:                git
  Location:            git://github.com/hesselink/adventofcode2021.git

common shared-settings
  build-depends:       base >=4.9 && <4.15
  ghc-options:         -Wall
  default-language:    Haskell2010

executable 1
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      1

executable 2
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      2

executable 3
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      3

executable 4
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      4
  build-depends:       split

executable 5
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      5
  build-depends:       split

executable 6
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      6
  build-depends:       containers
                     , split

executable 7
  import:              shared-settings
  main-is:             Main.hs
  hs-source-dirs:      7
  build-depends:       split
